WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106977
RenderProgress does not repaint on value change
https://bugs.webkit.org/show_bug.cgi?id=106977
Summary
RenderProgress does not repaint on value change
Benjamin Poulain
Reported
2013-01-15 20:11:57 PST
...and that's silly
Attachments
Patch
(2.11 KB, patch)
2013-01-15 20:24 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-01-15 20:24:07 PST
Created
attachment 182914
[details]
Patch
Joseph Pecoraro
Comment 2
2013-01-22 14:01:38 PST
Comment on
attachment 182914
[details]
Patch r=me
Benjamin Poulain
Comment 3
2013-01-23 17:55:32 PST
Comment on
attachment 182914
[details]
Patch Clearing flags on attachment: 182914 Committed
r140622
: <
http://trac.webkit.org/changeset/140622
>
Benjamin Poulain
Comment 4
2013-01-23 17:55:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug