RenderProgress does not repaint on value change https://bugs.webkit.org/show_bug.cgi?id=106977

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-01-23
Reviewed by Joseph Pecoraro.

No test because the ouput depends on the code of RenderTheme, and
we use the platform theme for testing.

* rendering/RenderProgress.cpp:
(WebCore::RenderProgress::updateFromElement):
(WebCore::RenderProgress::updateAnimationState):
Previously, repaint() was only called on two occasions:
-On animationTimerFired().
-In response to updateFromElement() if and only if the RenderTheme start/stop an
 animation previously stopped/running.

When changing the value of HTMLProgressElement, no repaint was called until
the next timer fired for the animation.
This is a problem if:
-The animation of RenderTheme is slow.
-If there is no animation (the element is never updated in that case).


git-svn-id: svn://svn.chromium.org/blink/trunk@140622 bbb929c8-8fbe-4397-9dbb-9b2b20218538