third_party/WebKit/Source/WebCore/rendering/RenderProgress.cpp
@@ -57,6 +57,7 @@ void RenderProgress::updateFromElement()
     m_position = element->position();
 
     updateAnimationState();
+    repaint();
     RenderBlock::updateFromElement();
 }
 
@@ -92,7 +93,6 @@ void RenderProgress::updateAnimationState()
     if (animating == m_animating)
         return;
 
-    repaint();
     m_animating = animating;
     if (m_animating) {
         m_animationStartTime = currentTime();
